# GrowOMatic

DualLevelSensor/: DualLevelSensor.kicad_pcb  DualLevelSensor.kicad_prl  DualLevelSensor.kicad_pro  DualLevelSensor.kicad_sch  fp-info-cache
DualLevelSensor/gerber/: DualLevelSensor-B_Paste.gbp  DualLevelSensor-B_Silkscreen.gbo  DualLevelSensor-F_Mask.gts  DualLevelSensor-F_Silkscreen.gto  DualLevelSensor-In2_Cu.g3  DualLevelSensor-PTH.drl
DualValveCon/: DualValveCon.kicad_pcb  DualValveCon.kicad_prl  DualValveCon.kicad_pro  DualValveCon.kicad_sch  fp-info-cache
DualValveCon/gerber/: DualValveCon-B_Mask.gbs  DualValveCon-B_Silkscreen.gbo  DualValveCon-Edge_Cuts.gm1  DualValveCon-F_Cu.gtl  DualValveCon-NPTH-drl_map.gbr  DualValveCon-PTH.drl
FluidPresenceSensor/AntennaL/: FPS_AL.kicad_pcb  FPS_AL.kicad_prl  FPS_AL.kicad_pro  FPS_AL.kicad_sch
FluidPresenceSensor/AntennaL/gerber/: FPS_AL-B_Mask.gbs  FPS_AL-B_Silkscreen.gbo  FPS_AL-F_Cu.gtl  FPS_AL-F_Silkscreen.gto  FPS_AL-NPTH.drl  FPS_AL-PTH-drl_map.gbr
FluidPresenceSensor/AntennaR/: FPS_AR.kicad_pcb  FPS_AR.kicad_prl
FluidPresenceSensor/AntennaR/gerber/: FPS_AR-B_Paste.gbp  FPS_AR-B_Silkscreen.gbo  FPS_AR-F_Mask.gts  FPS_AR-F_Paste.gtp
FluidPresenceSensor/BasePcb/: FluidPresenceSensor.kicad_pcb  FluidPresenceSensor.kicad_prl
FluidPresenceSensor/BasePcb/gerber/: FluidPresenceSensor-B_Mask.gbs  FluidPresenceSensor-Edge_Cuts.gm1  FluidPresenceSensor-F_Mask.gts  FluidPresenceSensor-F_Silkscreen.gto  FluidPresenceSensor-In2_Cu.g3  FluidPresenceSensor-NPTH-drl_map.gbr  FluidPresenceSensor-NPTH.drl  FluidPresenceSensor-PTH-drl_map.gbr  FluidPresenceSensor-PTH.drl
Hardware/DualLevelSensor/: DualLevelSensor.kicad_pcb  DualLevelSensor.kicad_prl  DualLevelSensor.kicad_pro  DualLevelSensor.kicad_sch
Hardware/DualLevelSensor/gerber/: DualLevelSensor-B_Cu.gbl  DualLevelSensor-B_Mask.gbs  DualLevelSensor-Edge_Cuts.gm1  DualLevelSensor-F_Cu.gtl  DualLevelSensor-F_Paste.gtp  DualLevelSensor-In1_Cu.g2  DualLevelSensor-NPTH-drl_map.gbr  DualLevelSensor-NPTH.drl  DualLevelSensor-PTH-drl_map.gbr
Hardware/DualValveCon/: DualValveCon.kicad_pcb  DualValveCon.kicad_prl  DualValveCon.kicad_pro  DualValveCon.kicad_sch  motorDriver.kicad_sch
Hardware/DualValveCon/gerber/: DualValveCon-B_Cu.gbl  DualValveCon-B_Paste.gbp  DualValveCon-F_Mask.gts  DualValveCon-F_Paste.gtp  DualValveCon-F_Silkscreen.gto  DualValveCon-NPTH.drl  DualValveCon-PTH-drl_map.gbr
Hardware/FluidPresenceSensor/AntennaL/: FPS_AL.kicad_pcb  FPS_AL.kicad_prl
Hardware/FluidPresenceSensor/AntennaR/: FPS_AR.kicad_pcb  FPS_AR.kicad_pro  FPS_AR.kicad_sch
Hardware/FluidPresenceSensor/BasePcb/: FluidPresenceSensor.kicad_pcb  FluidPresenceSensor.kicad_prl  FluidPresenceSensor.kicad_pro  FluidPresenceSensor.kicad_sch  capSens.kicad_sch
Hardware/LED-Balken/LED-Steuerung/: Steuerung.kicad_pcb  Steuerung.kicad_prl
Hardware/LED-Balken/LED-Treiber/: Treiber.kicad_pcb  Treiber.kicad_prl  Treiber.kicad_sch
Hardware/LedModul/LEDPcb/: LEDPcb.kicad_pcb  LEDPcb.kicad_pro  LEDPcb.kicad_sch
Hardware/LedModul/LEDTreiber/: LEDTreiber.kicad_pcb  LEDTreiber.kicad_pro  LEDTreiber.kicad_sch  Nutzen.kicad_pcb  (+1 more)
Hardware/PressureSensor/: PressureSensor.kicad_prl  PressureSensor.kicad_pro
Hardware/hydCircCon/: hydCircCon.kicad_prl  hydCircCon.kicad_pro  hydCircCon.kicad_sch  pheri.kicad_sch
Hardware/mainControl/: mainControl.kicad_prl  mainControl.kicad_pro  mainControl.kicad_sch  pheri.kicad_sch
Hardware/pumpCon/: pumpCon.kicad_pcb  pumpCon.kicad_prl  pumpCon.kicad_pro  pumpCon.kicad_sch  pumpDrivers.kicad_sch
Hardware/reservoirCon/: reservoirCon.kicad_prl
Hardware/sensorNode/: sensorAmp.kicad_sch  sensorNode.kicad_prl  sensorNode.kicad_sch
Hardware/stencil/: stencil.kicad_prl
PressureSensor/: PressureSensor.kicad_pcb  PressureSensor.kicad_prl  PressureSensor.kicad_sch
PressureSensor/gerber/: PressureSensor-F_Cu.gtl  PressureSensor-F_Paste.gtp  PressureSensor-NPTH-drl_map.gbr  PressureSensor-PTH-drl_map.gbr  PressureSensor-PTH.drl
Software/RP2040/: CMakeLists.txt
Software/RP2040/dualLevelSens/: CMakeLists.txt  dualLevelSens.cpp  dualLevelSens.h
Software/RP2040/testSequencer/: CMakeLists.txt  testSequencer.cpp
Software/RP2040/uniFw/: CMakeLists.txt  uniFw.cpp  uniFw.h
SoilMoistureSensor/Pcb/: capSens.kicad_sch  soilMoistureSensor.kicad_pcb  soilMoistureSensor.kicad_prl  soilMoistureSensor.kicad_pro  soilMoistureSensor.kicad_sch
hydCircCon/: hydCircCon.kicad_pcb  hydCircCon.kicad_prl  hydCircCon.kicad_pro  hydCircCon.kicad_sch
hydCircCon/gerber/: hydCircCon-B_Cu.gbl  hydCircCon-B_Mask.gbs  hydCircCon-B_Paste.gbp  hydCircCon-In2_Cu.g3  hydCircCon-NPTH-drl_map.gbr  hydCircCon-PTH.drl
mainControl/: ESP.kicad_sch  mainControl.kicad_pcb  mainControl.kicad_prl  mainControl.kicad_pro  mainControl.kicad_sch
mainControl/gerber/: mainControl-B_Paste.gbp  mainControl-B_Silkscreen.gbo  mainControl-F_Cu.gtl  mainControl-F_Mask.gts  mainControl-F_Silkscreen.gto  mainControl-In1_Cu.g2  mainControl-PTH.drl
pumpCon/: pumpCon.kicad_pcb  pumpCon.kicad_prl  pumpCon.kicad_pro  pumpCon.kicad_sch  pumpDrivers.kicad_sch
pumpCon/gerber/: pumpCon-B_Cu.gbl  pumpCon-B_Silkscreen.gbo  pumpCon-F_Cu.gtl  pumpCon-F_Paste.gtp  pumpCon-In1_Cu.g2  pumpCon-In2_Cu.g3  pumpCon-PTH-drl_map.gbr  pumpCon-PTH.drl
reservoirCon/: reservoirCon.kicad_pcb  reservoirCon.kicad_prl  reservoirCon.kicad_pro  reservoirCon.kicad_sch
reservoirCon/gerber/: reservoirCon-B_Paste.gbp  reservoirCon-B_Silkscreen.gbo  reservoirCon-F_Paste.gtp  reservoirCon-In2_Cu.g3  reservoirCon-NPTH.drl  reservoirCon-PTH-drl_map.gbr
sensorNode/: ecKurve.ods  sensorAmp.kicad_sch  sensorNode.kicad_pcb  sensorNode.kicad_prl  sensorNode.kicad_pro  sensorNode.kicad_sch
sensorNode/gerber/: sensorNode-B_Cu.gbl  sensorNode-B_Paste.gbp  sensorNode-F_Cu.gtl  sensorNode-In1_Cu.g2  sensorNode-NPTH.drl  sensorNode-PTH-drl_map.gbr
stencil/: stencil.kicad_prl  stencil.kicad_pro
stencil/gerber/: stencil-F_Mask.gts  stencil-F_Paste.gtp  stencil-NPTH-drl_map.gbr  stencil-NPTH.drl  stencil-PTH-drl_map.gbr  stencil-PTH.drl
(+273 files in other folders)
